fix: text overflow on small viewports

--- a/style.css
+++ b/style.css
@@ -34,7 +34,17 @@ body {
   color: transparent;
   text-align: center;
   line-height: 1;
-  font-size: 3.6rem;
+  font-size: 2rem;
+}
+@media (min-width: 480px) {
+  .avatar .title {
+    font-size: 2.8rem;
+  }
+}
+@media (min-width: 600px) {
+  .avatar .title {
+    font-size: 3.6rem;
+  }
 }
 @keyframes avatar-image {
   0% {
